# rust-backend-template

./: .gitignore  Cargo.toml
assets/css/: styles.css
log/: config.yaml
src/: main.rs  template.rs
src/database/: mod.rs
src/route/handlers/: error.rs  http.rs
src/state/: mod.rs
templates/: 404.html  500.html  about.html  base.html  index.html
